# mygoodbots

./: .env.example  .gitignore  README.md  deployment.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
backend/: Dockerfile  main.py  models.py
backend/approval/: gate.py
backend/bots/: base.py  coding_bot.py  cron_bot.py  genai_bot.py  meta_bot.py  news_bot.py  research_bot.py  trading_bot.py
backend/db/: database.py
backend/deployer/: __init__.py  git_deployer.py
backend/dispatcher/: dispatcher.py  session_store.py
backend/gateway/: app.py  auth.py  rate_limiter.py  routes.py  sanitizer.py
backend/integrations/: telegram_handler.py
backend/llm/: client.py
backend/market/: price_feed.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: chatApi.ts
frontend/src/components/: ApprovalPanel.tsx  BotSelector.tsx  ChatWindow.tsx
migrations/: 001_initial.sql
tests/unit/: test_approval_gate.py  test_base_bot.py  test_bots.py  test_dispatcher.py  test_llm_client.py  test_news_bot.py  test_telegram_handler.py
